# timeline

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
docs/: prd-unified-time-expression.md
docs/adr/: 0001-separate-data-format-from-agent-behavior.md  0002-introduce-timeline-cli-with-jsonline-storage.md  0003-skill-md-update-to-cli-guide.md  0004-introduce-id-for-todo-event-identification.md  0005-project-version-0.1.1-id-system-and-cli-refactoring.md  0005-schema-version-2-and-project-version-0.2.0.md  0006-change-storage-format-to-one-item-per-line.md  0007-simplify-output-formats-to-markdown-and-json.md  0008-change-json-output-to-jsonlines.md  0009-cli-error-handling.md  0010-add-command-output-and-time-keyword-normalization.md  0011-timeline-directory-structure.md  0012-unified-time-expression-system.md  0013-use-null-for-undated-todos.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
scripts/: migrate_from_markdown.py
skills/grill-for-good-day/: SKILL.md
skills/report-timeline-cli-issues/: SKILL.md
skills/setup-timeline/: SKILL.md
skills/setup-timeline-for-hermes/: SKILL.md
skills/timeline/: SKILL.md
src/timeline_cli/: __init__.py  cli.py  errors.py  formatting.py  models.py  output_formatter.py  (+5 more)
tests/: conftest.py  test_at_parameter.py  test_cli.py  test_diary.py  test_doctor.py  test_event.py  test_event_commands.py  test_event_edit.py  test_event_v2.py  test_export.py  test_export_removed.py  test_formatting.py  test_id.py  test_init.py  test_list.py  test_migrate.py  test_models.py  test_note.py  test_note_commands.py  test_output.py  test_range.py  test_storage.py  test_time_expr.py  test_time_expression.py  test_todo.py  test_todo_edit.py  test_todo_status.py  test_todo_v2.py
(+27 files in other folders)
